# TrinetraAI-An-Intelligent-Multi-Sensor-Fusion-Framework-for-GPS-Denied-Quantum-Navigation

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  trinetra_prd_build.tex
.github/workflows/: .gitkeep
Knowledge Source/: Phase_10_Master_Prompt_Trinetra_AI_ROS2.md  Trinetra-AI_Literature_Review_Database.xlsx  trinetra_phase4_timeseries.md
configs/: dataset.yaml  default.yaml  logging.yaml  model.yaml  navigation.yaml
datasets/cache/: .gitkeep
datasets/canonical/: .gitkeep
datasets/metadata/: .gitkeep
datasets/raw/comma2k19/: .gitkeep
datasets/raw/euroc/: .gitkeep
datasets/raw/kitti/: .gitkeep
datasets/raw/magnav/: .gitkeep
datasets/raw/oxiod/: .gitkeep
datasets/raw/ronin/: .gitkeep
datasets/raw/tlio/: .gitkeep
docs/: architecture.md
docs/adr/: 0001-dataset-registration.md  0002-hdf5-reader-canonical-mapper-separation.md
logs/: .gitkeep
reports/eda/ronin/coordinate_validation/: coordinate_checks.csv  frame_validation.csv  orientation_checks.csv  validation_summary.md
reports/eda/ronin/quality/: invalid_values.csv  missing_values.csv  outliers.csv  quality_summary.md  sensor_quality.csv
reports/eda/ronin/statistics/: dataset_statistics.csv  recording_statistics.csv  sensor_statistics.csv  summary.md  timestamp_statistics.csv
scripts/: check_environment.py  setup_environment.ps1  setup_environment.sh
src/trinetra/: __init__.py  __main__.py
src/trinetra/adapters/: __init__.py
src/trinetra/adapters/datasets/: __init__.py  metadata.py  registry.py
src/trinetra/adapters/ros2/: __init__.py
src/trinetra/adapters/sensors/: __init__.py
src/trinetra/adapters/storage/: __init__.py
src/trinetra/adapters/visualization/: __init__.py
src/trinetra/analysis/: __init__.py  coordinate_validation.py  dataset_statistics.py  frame_validation.py  main.py  orientation_validation.py  plot_utils.py  quality_assessment.py  quality_metrics.py  quality_summary.py  recording_statistics.py  report_export.py  sensor_statistics.py  summary.py  time_series.py  timestamp_statistics.py  validation_summary.py  visualization.py
src/trinetra/application/: __init__.py
src/trinetra/application/dataset/: __init__.py  filters.py  recording_iterator.py  samplers.py  split_loader.py
src/trinetra/application/orchestration/: __init__.py
src/trinetra/application/services/: __init__.py
src/trinetra/application/use_cases/: __init__.py
src/trinetra/domain/: __init__.py
src/trinetra/domain/ai/: __init__.py
src/trinetra/domain/common/: __init__.py
src/trinetra/domain/fusion/: __init__.py
src/trinetra/domain/interfaces/: __init__.py  dataset_interface.py  sensor_record.py
src/trinetra/domain/navigation/: __init__.py
src/trinetra/domain/state/: __init__.py
src/trinetra/infrastructure/: __init__.py
src/trinetra/infrastructure/config/: __init__.py  config.py
src/trinetra/infrastructure/logging/: __init__.py  logger.py
src/trinetra/infrastructure/persistence/: __init__.py
src/trinetra/shared/: __init__.py
src/trinetra_core/: __init__.py
src/trinetra_core/acquisition/: __init__.py
src/trinetra_core/ai_modules/: __init__.py
src/trinetra_core/features/: __init__.py
src/trinetra_core/navigation/: __init__.py
src/trinetra_core/preprocessing/: __init__.py
src/trinetra_core/sensor_fusion/: __init__.py
src/trinetra_core/utils/: config.py  exceptions.py  logger.py
tests/: test_config.py  test_exceptions.py  test_logger.py  test_project.py
tests/unit/: conftest.py  test_canonical_mapper.py  test_coordinate_validation.py  test_dataset_architecture.py  test_dataset_statistics.py  test_filters.py  test_frame_validation.py  test_hdf5_reader.py  test_logger.py  test_metadata_loader.py  test_orientation_validation.py  test_plot_utils.py  test_quality_assessment.py  test_quality_metrics.py  test_quality_summary.py  test_recording_iterator.py  test_recording_statistics.py  test_report_export.py  test_ronin_adapter.py  test_samplers.py  test_sensor_statistics.py  test_split_loader.py  test_summary.py  test_time_series.py  test_timestamp_statistics.py  test_validation_summary.py  test_visualization.py
(+13 files in other folders)
