[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trinetra-ai"
version = "0.1.0"
description = "An Intelligent Multi-Sensor Fusion Framework for GPS-Denied Quantum Navigation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Chetan Sethy" },
]
keywords = [
    "sensor-fusion",
    "navigation",
    "gps-denied",
    "quantum-navigation",
    "deep-learning",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.16.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
]

[project.urls]
Repository = "https://github.com/chetan7659/TrinetraAI-An-Intelligent-Multi-Sensor-Fusion-Framework-for-GPS-Denied-Quantum-Navigation"

[project.scripts]
trinetra = "trinetra_core.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

# ── Black ────────────────────────────────────────────
[tool.black]
target-version = ["py311"]
line-length = 100

# ── Ruff ─────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line length — handled by Black
]

[tool.ruff.lint.isort]
known-first-party = ["trinetra_core"]

# ── Pytest ───────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

# ── Coverage ─────────────────────────────────────────
[tool.coverage.run]
source = ["src/trinetra_core"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0
